# agents

./: pyproject.toml
2_openai/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb
3_crew/coder/: pyproject.toml
3_crew/coder/output/: code_and_output.txt
3_crew/coder/src/coder/: crew.py
3_crew/coder/src/coder/config/: agents.yaml
3_crew/debate/: pyproject.toml
3_crew/debate/src/debate/config/: agents.yaml
3_crew/debate_bedrock/debate_bedrock/: README.md  pyproject.toml  report.md
3_crew/debate_bedrock/debate_bedrock/src/debate_bedrock/: crew.py  main.py
3_crew/financial_researcher/: .env.example  README.md  pyproject.toml
3_crew/financial_researcher/output/: report.md
3_crew/financial_researcher/src/financial_researcher/config/: agents.yaml  tasks.yaml
3_crew/financial_researcher/src/financial_researcher/tools/: custom_tool.py
