[project]
name = "debate_bedrock"
version = "0.1.0"
description = "debate_bedrock using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[bedrock,tools]==1.9.3",
]

[project.scripts]
debate_bedrock = "debate_bedrock.main:run"
run_crew = "debate_bedrock.main:run"
train = "debate_bedrock.main:train"
replay = "debate_bedrock.main:replay"
test = "debate_bedrock.main:test"
run_with_trigger = "debate_bedrock.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
